Updated app format

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="title">
-            <h1>Spending Tracker</h1>
+            <h1>&#128178; Spending Tracker &#128178;</h1>
         </div>
         <div class="form">
             <form action="javascript:void(0);" method="POST"
@@ -22,9 +22,9 @@
             </form>
                 <p style="font-size: 30px; font-family: Bahnschrift;">Total number of Receipts:</p>
                 <p id="counter" style="font-size: 30px; font-family: Bahnschrift;">No Receipts</p>
-                <table>
+                <h2>&#128195; Receipts &#128195;</h2>
+                <table style="margin-left:auto;margin-right:auto;">
                     <tr class="expenses">
-                        <th><h2>Receipts</h2></th>
                         <tbody id="receipt">
                         </tbody>
                 </table>
